Tambah/update file baru

--- a/dashboard.html
+++ b/dashboard.html
@@ -21,16 +21,16 @@
         <li><a href="riwayat-pegawai.html"><i class="fas fa-history"></i><span>Riwayat Pegawai</span></a></li>
         <li><a href="manajemen-arsip.html"><i class="fas fa-archive"></i><span>Manajemen Arsip</span></a></li>
         <li><a href="#"><i class="fas fa-database"></i><span>Master Data</span></a></li>
-        <li><a href="#"><i class="fas fa-chart-line"></i><span>KGB</span></a></li>
-        <li><a href="#"><i class="fas fa-calendar-alt"></i><span>Cuti</span></a></li>
-        <li><a href="#"><i class="fas fa-briefcase"></i><span>Penugasan</span></a></li>
-        <li><a href="#"><i class="fas fa-walking"></i><span>Pensiun</span></a></li>
-        <li><a href="#"><i class="fas fa-sync-alt"></i><span>Rotasi</span></a></li>
-        <li><a href="#"><i class="fas fa-exchange-alt"></i><span>Mutasi</span></a></li>
+        <li><a href="kgb.html"><i class="fas fa-chart-line"></i><span>KGB</span></a></li>
+        <li><a href="cuti.html"><i class="fas fa-calendar-alt"></i><span>Cuti</span></a></li>
+        <li><a href="penugasan.html"><i class="fas fa-briefcase"></i><span>Penugasan</span></a></li>
+        <li><a href="pensiun.html"><i class="fas fa-walking"></i><span>Pensiun</span></a></li>
+        <li><a href="rotasi.html"><i class="fas fa-sync-alt"></i><span>Rotasi</span></a></li>
+        <li><a href="mutasi.html"><i class="fas fa-exchange-alt"></i><span>Mutasi</span></a></li>
         <li><a href="#"><i class="fas fa-folder-plus"></i><span>Arsip Lainnya</span></a></li>
         <li><a href="#"><i class="fas fa-file-signature"></i><span>Kontrak Kerja</span></a></li>
-        <li><a href="#"><i class="fas fa-envelope-open-text"></i><span>Surat Perintah</span></a></li>
-        <li><a href="#"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
+        <li><a href="surat-perintah.html"><i class="fas fa-envelope-open-text"></i><span>Surat Perintah</span></a></li>
+        <li><a href="surat-rekomendasi.html"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
         <li><a href="#"><i class="fas fa-chart-pie"></i><span>Laporan</span></a></li>
     </ul>
 </aside>
