--- a/manajemen-arsip.html
+++ b/manajemen-arsip.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="assets/css/dashboard.css">
 </head>
+
 <body>
     <aside class="main-sidebar" id="sidebar">
         <div class="sidebar-header">
@@ -19,16 +21,16 @@
             <li><a href="riwayat-pegawai.html"><i class="fas fa-history"></i><span>Riwayat Pegawai</span></a></li>
             <li><a href="manajemen-arsip.html"><i class="fas fa-archive"></i><span>Manajemen Arsip</span></a></li>
             <li><a href="#"><i class="fas fa-database"></i><span>Master Data</span></a></li>
-            <li><a href="#"><i class="fas fa-chart-line"></i><span>KGB</span></a></li>
-            <li><a href="#"><i class="fas fa-calendar-alt"></i><span>Cuti</span></a></li>
-            <li><a href="#"><i class="fas fa-briefcase"></i><span>Penugasan</span></a></li>
-            <li><a href="#"><i class="fas fa-walking"></i><span>Pensiun</span></a></li>
-            <li><a href="#"><i class="fas fa-sync-alt"></i><span>Rotasi</span></a></li>
-            <li><a href="#"><i class="fas fa-exchange-alt"></i><span>Mutasi</span></a></li>
+            <li><a href="kgb.html"><i class="fas fa-chart-line"></i><span>KGB</span></a></li>
+            <li><a href="cuti.html"><i class="fas fa-calendar-alt"></i><span>Cuti</span></a></li>
+            <li><a href="penugasan.html"><i class="fas fa-briefcase"></i><span>Penugasan</span></a></li>
+            <li><a href="pensiun.html"><i class="fas fa-walking"></i><span>Pensiun</span></a></li>
+            <li><a href="rotasi.html"><i class="fas fa-sync-alt"></i><span>Rotasi</span></a></li>
+            <li><a href="mutasi.html"><i class="fas fa-exchange-alt"></i><span>Mutasi</span></a></li>
             <li><a href="#"><i class="fas fa-folder-plus"></i><span>Arsip Lainnya</span></a></li>
             <li><a href="#"><i class="fas fa-file-signature"></i><span>Kontrak Kerja</span></a></li>
-            <li><a href="#"><i class="fas fa-envelope-open-text"></i><span>Surat Perintah</span></a></li>
-            <li><a href="#"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
+            <li><a href="surat-perintah.html"><i class="fas fa-envelope-open-text"></i><span>Surat Perintah</span></a></li>
+            <li><a href="surat-rekomendasi.html"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
             <li><a href="#"><i class="fas fa-chart-pie"></i><span>Laporan</span></a></li>
         </ul>
     </aside>
@@ -49,6 +51,18 @@
             <h1 id="content-title">Manajemen Arsip Pegawai</h1>
         </div>
 
+        <div class="card mb-3">
+            <div class="card-body">
+                <div class="form-group">
+                    <label for="search-input" class="form-label">Cari Nama Pegawai:</label>
+                    <div class="input-with-icon">
+                        <i class="fas fa-search"></i>
+                        <input type="text" id="search-input" class="form-control" placeholder="Ketik untuk mencari...">
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="card">
             <div class="card-body">
                 <div class="table-responsive">
@@ -64,7 +78,7 @@
                             </tr>
                         </thead>
                         <tbody id="tabel-pegawai-body">
-                            </tbody>
+                        </tbody>
                     </table>
                 </div>
             </div>
@@ -79,18 +93,52 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p class="text-muted">Kelola file arsip digital untuk pegawai yang dipilih.</p>
-                    <table class="table table-bordered">
-                        <thead class="table-light">
-                            <tr>
-                                <th>Jenis Arsip</th>
-                                <th>Status</th>
-                                <th>Aksi</th>
-                            </tr>
-                        </thead>
-                        <tbody id="tabel-arsip-detail-body">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h6 class="card-title">Unggah Arsip Baru</h6>
+                            <form id="form-upload-arsip" enctype="multipart/form-data">
+                                <input type="hidden" id="upload-pegawai-id" name="pegawai_id">
+                                <div class="row">
+                                    <div class="col-md-5">
+                                        <div class="form-group">
+                                            <label for="upload-nama-arsip">Nama Arsip</label>
+                                            <input type="text" id="upload-nama-arsip" name="nama_arsip"
+                                                class="form-control" placeholder="Contoh: SK Jabatan Struktural"
+                                                required>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-5">
+                                        <div class="form-group">
+                                            <label for="upload-file">Pilih File (PDF, JPG, PNG)</label>
+                                            <input type="file" id="upload-file" name="file_arsip" class="form-control"
+                                                required>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2 d-flex align-items-end">
+                                        <button type="submit" class="btn btn-success w-100">
+                                            <i class="fas fa-upload"></i> Unggah
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                    <h6 class="mb-3">Daftar Arsip Digital</h6>
+                    <div class="table-responsive">
+                        <table class="table table-bordered">
+                            <thead class="table-light">
+                                <tr>
+                                    <th style="width: 50px;">No</th>
+                                    <th>Nama Arsip</th>
+                                    <th>Tanggal Upload</th>
+                                    <th style="width: 120px;">Aksi</th>
+                                </tr>
+                            </thead>
+                            <tbody id="tabel-arsip-detail-body">
                             </tbody>
-                    </table>
+                        </table>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
@@ -98,10 +146,12 @@
             </div>
         </div>
     </div>
-    
+
     <input type="file" id="upload-file-input" style="display: none;">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/dashboard.js"></script>
-    <script src="assets/js/manajemen-arsip.js"></script> </body>
+    <script src="assets/js/manajemen-arsip.js"></script>
+</body>
+
 </html>
