Tambah/update file baru

--- a/manajemen-arsip.html
+++ b/manajemen-arsip.html
@@ -30,7 +30,7 @@
             <li><a href="#"><i class="fas fa-folder-plus"></i><span>Arsip Lainnya</span></a></li>
             <li><a href="#"><i class="fas fa-file-signature"></i><span>Kontrak Kerja</span></a></li>
             <li><a href="surat-perintah.html"><i class="fas fa-envelope-open-text"></i><span>Surat Perintah</span></a></li>
-            <li><a href="surat-rekomendasi.html"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
+            <li><a href="manajemen-surat.html"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
             <li><a href="#"><i class="fas fa-chart-pie"></i><span>Laporan</span></a></li>
         </ul>
     </aside>
