--- a/rotasi.html
+++ b/rotasi.html
@@ -30,8 +30,8 @@
             <li><a href="#"><i class="fas fa-folder-plus"></i><span>Arsip Lainnya</span></a></li>
             <li><a href="#"><i class="fas fa-file-signature"></i><span>Kontrak Kerja</span></a></li>
             <li><a href="surat-perintah.html"><i class="fas fa-envelope-open-text"></i><span>Surat Perintah</span></a></li>
-            <li><a href="surat-rekomendasi.html"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
-            <li><a href="#"><i class="fas fa-chart-pie"></i><span>Laporan</span></a></li>
+            <li><a href="manajemen-surat.html"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
+            <li><a href="laporan.html"><i class="fas fa-chart-pie"></i><span>Laporan</span></a></li>
         </ul>
     </aside>
 
@@ -50,6 +50,18 @@
             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#rotasiModal">
                 <i class="fas fa-plus"></i> Buat Pengajuan Rotasi
             </button>
+        </div>
+        
+        <div class="card mb-3">
+            <div class="card-body">
+                <div class="form-group">
+                    <label for="search-rotasi-input" class="form-label">Cari Riwayat (Nama / NIP):</label>
+                    <div class="input-with-icon">
+                        <i class="fas fa-search"></i>
+                        <input type="text" id="search-rotasi-input" class="form-control" placeholder="Ketik untuk mencari...">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="card">
