--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <h3>Digitalisasi Arsip Kepegawaian</h3>
             <p>UOBK RSUD Dr. Slamet</p>
-            <form action="dashboard.html" method="get">
+            <form id="login-form">
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" required>
