--- a/manajemen-surat.html
+++ b/manajemen-surat.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surat Perintah - Sistem Kepegawaian</title>
+    <title>Manajemen Surat - Sistem Kepegawaian</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="assets/css/dashboard.css">
@@ -46,39 +46,24 @@
 
     <main class="main-content">
         <div class="content-header">
-            <h1 id="content-title">Surat Perintah PNS</h1>
+            <h1 id="content-title">Manajemen Surat</h1>
             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#suratModal">
-                <i class="fas fa-plus"></i> Buat Surat Perintah Baru
+                <i class="fas fa-plus"></i> Buat Surat Baru
             </button>
         </div>
 
-        <div class="card mb-3">
-            <div class="card-body">
-                <div class="form-group">
-                    <label for="search-surat-input" class="form-label">Cari Riwayat (Nama / NIP):</label>
-                    <div class="input-with-icon">
-                        <i class="fas fa-search"></i>
-                        <input type="text" id="search-surat-input" class="form-control" placeholder="Ketik untuk mencari...">
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="card">
-            <div class="card-header">
-                Riwayat Surat Perintah
-            </div>
+            <div class="card-header">Riwayat Pembuatan Surat</div>
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-hover">
                         <thead class="table-light">
                             <tr>
                                 <th>No.</th>
+                                <th>Jenis Surat</th>
                                 <th>No. Surat</th>
                                 <th>Nama Pegawai</th>
-                                <th>Tugas Baru</th>
                                 <th>Tanggal Surat</th>
-                                <th>Lampiran</th>
                                 <th>Aksi</th>
                             </tr>
                         </thead>
@@ -94,75 +79,54 @@
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="suratModalLabel">Form Surat Perintah</h5>
+                    <h5 class="modal-title" id="suratModalLabel">Form Pembuatan Surat</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form id="form-surat" class="p-3">
                         <input type="hidden" id="surat-pegawai-id" name="pegawai_id">
-                        <div class="row g-3">
-                            <div class="col-12 position-relative mb-3">
-                                <label for="surat-nama" class="form-label">Cari Nama Pegawai</label>
-                                <input type="text" id="surat-nama" class="form-control"
-                                    placeholder="Ketik nama untuk mencari..." autocomplete="off" required>
+                        
+                        <div class="row g-3 mb-4">
+                            <div class="col-md-5 position-relative">
+                                <label for="surat-nama" class="form-label">Nama Pegawai / Dokter (Cari)</label>
+                                <input type="text" id="surat-nama" class="form-control" placeholder="Ketik nama untuk mencari..." autocomplete="off" required>
                                 <div id="search-results-surat" class="search-results-dropdown"></div>
                             </div>
-
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 <label for="surat-nip" class="form-label">NIP</label>
                                 <input type="text" id="surat-nip" class="form-control" readonly>
                             </div>
-                            <div class="col-md-3">
-                                <label for="surat-golongan" class="form-label">Golongan/Pangkat</label>
+                             <div class="col-md-2">
+                                <label for="surat-golongan" class="form-label">Golongan</label>
                                 <input type="text" id="surat-golongan" class="form-control" readonly>
                             </div>
-                            <div class="col-md-3">
+                             <div class="col-md-3">
                                 <label for="surat-jabatan" class="form-label">Jabatan</label>
                                 <input type="text" id="surat-jabatan" class="form-control" readonly>
                             </div>
-                            <div class="col-md-3">
-                                <label for="surat-unit-kerja" class="form-label">Unit Kerja</label>
-                                <input type="text" id="surat-unit-kerja" class="form-control" readonly>
+                        </div>
+                        
+                        <div class="row g-3">
+                             <div class="col-md-12">
+                                <label for="jenis-surat-select" class="form-label fw-bold">Pilih Jenis Surat</label>
+                                <select id="jenis-surat-select" name="jenis_surat" class="form-select" required>
+                                    <option value="">-- Pilih Jenis --</option>
+                                    <option value="Rekomendasi">Rekomendasi</option>
+                                    <option value="Konsumtif">Keterangan Konsumtif</option>
+                                    <option value="Keterangan Kerja">Keterangan Kerja</option>
+                                </select>
                             </div>
-
-                            <div class="col-md-6">
-                                <label for="surat-tanggal" class="form-label">Tanggal Surat Perintah</label>
-                                <input type="date" id="surat-tanggal" name="tanggal_surat_perintah" class="form-control"
-                                    required>
-                            </div>
-                            <div class="col-md-6">
-                                <label for="surat-no" class="form-label">No. Surat Perintah</label>
-                                <input type="text" id="surat-no" name="no_surat_perintah" class="form-control" required>
-                            </div>
-
-                            <div class="col-md-6">
-                                <label for="surat-alamat" class="form-label">Alamat Rumah</label>
-                                <textarea id="surat-alamat" class="form-control" rows="3" readonly></textarea>
-                            </div>
-                            <div class="col-md-6">
-                                <label for="surat-pendidikan" class="form-label">Pendidikan</label>
-                                <input type="text" id="surat-pendidikan" class="form-control" readonly>
-                            </div>
-                            <div class="col-12">
-                                <label for="surat-jabatan-baru" class="form-label">Jabatan/Tugas Baru</label>
-                                <input type="text" id="surat-jabatan-baru" name="jabatan_tugas_baru"
-                                    class="form-control" required>
-                            </div>
-
-                            <div class="col-12 text-center mt-4">
-                                <label for="surat-lampiran" class="btn btn-outline-primary">
-                                    <i class="fas fa-paperclip"></i> Pilih Lampiran
-                                </label>
-                                <input type="file" id="surat-lampiran" name="path_lampiran" class="d-none">
-                                <p id="surat-file-name" class="text-muted mt-2 small"></p>
-                            </div>
+                        </div>
+                        <hr>
+                        <div id="form-dinamis-surat">
+                            <p class="text-center text-muted">Pilih jenis surat di atas untuk menampilkan form isian.</p>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
                     <button type="submit" class="btn btn-primary" form="form-surat">
-                        <i class="fas fa-save"></i> Save
+                        <i class="fas fa-save"></i> Simpan
                     </button>
                 </div>
             </div>
@@ -171,7 +135,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/dashboard.js"></script>
-    <script src="assets/js/surat-perintah.js"></script>
-</body>
+    <script src="assets/js/manajemen-surat.js"></script> </body>
 
 </html>
