--- a/pensiun.html
+++ b/pensiun.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale-1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pensiun - Sistem Kepegawaian</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -30,8 +30,8 @@
             <li><a href="#"><i class="fas fa-folder-plus"></i><span>Arsip Lainnya</span></a></li>
             <li><a href="#"><i class="fas fa-file-signature"></i><span>Kontrak Kerja</span></a></li>
            <li><a href="surat-perintah.html"><i class="fas fa-envelope-open-text"></i><span>Surat Perintah</span></a></li>
-            <li><a href="surat-rekomendasi.html"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
-            <li><a href="#"><i class="fas fa-chart-pie"></i><span>Laporan</span></a></li>
+            <li><a href="manajemen-surat.html"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
+            <li><a href="laporan.html"><i class="fas fa-chart-pie"></i><span>Laporan</span></a></li>
         </ul>
     </aside>
 
@@ -50,6 +50,18 @@
             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pensiunModal">
                 <i class="fas fa-plus"></i> Buat Pengajuan Pensiun
             </button>
+        </div>
+
+        <div class="card mb-3">
+            <div class="card-body">
+                <div class="form-group">
+                    <label for="search-pensiun-input" class="form-label">Cari Riwayat (Nama / NIP):</label>
+                    <div class="input-with-icon">
+                        <i class="fas fa-search"></i>
+                        <input type="text" id="search-pensiun-input" class="form-control" placeholder="Ketik untuk mencari...">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="card">
