--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
         <li><a href="rotasi.html"><i class="fas fa-sync-alt"></i><span>Rotasi</span></a></li>
         <li><a href="mutasi.html"><i class="fas fa-exchange-alt"></i><span>Mutasi</span></a></li>
         <li><a href="#"><i class="fas fa-folder-plus"></i><span>Arsip Lainnya</span></a></li>
-        <li><a href="#"><i class="fas fa-file-signature"></i><span>Kontrak Kerja</span></a></li>
+        <li><a href="kontrak-kerja.html"><i class="fas fa-file-signature"></i><span>Manajemen Kontrak</span></a></li>
         <li><a href="surat-perintah.html"><i class="fas fa-envelope-open-text"></i><span>Surat Perintah</span></a></li>
         <li><a href="manajemen-surat.html"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
         <li><a href="laporan.html"><i class="fas fa-chart-pie"></i><span>Laporan</span></a></li>
