--- a/resign_pegawai.html
+++ b/resign_pegawai.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manajemen Surat - Sistem Kepegawaian</title>
+    <title>Resign Pegawai - Sistem Kepegawaian</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="assets/css/dashboard.css">
@@ -27,8 +27,8 @@
             <li><a href="pensiun.html"><i class="fas fa-walking"></i><span>Pensiun</span></a></li>
             <li><a href="rotasi.html"><i class="fas fa-sync-alt"></i><span>Rotasi</span></a></li>
             <li><a href="mutasi.html"><i class="fas fa-exchange-alt"></i><span>Mutasi</span></a></li>
-            <li><a href="#"><i class="fas fa-folder-plus"></i><span>Arsip Lainnya</span></a></li>
-            <li><a href="kontrak-kerja.html"><i class="fas fa-file-signature"></i><span>Manajemen Kontrak</span></a></li>
+            <li><a href="kontrak-kerja.html"><i class="fas fa-file-signature"></i><span>Kontrak Kerja</span></a></li>
+            <li><a href="resign-pegawai.html"><i class="fas fa-user-slash"></i><span>Resign Pegawai</span></a></li>
             <li><a href="surat-perintah.html"><i class="fas fa-envelope-open-text"></i><span>Surat Perintah</span></a></li>
             <li><a href="manajemen-surat.html"><i class="fas fa-mail-bulk"></i><span>Manajemen Surat</span></a></li>
             <li><a href="laporan.html"><i class="fas fa-chart-pie"></i><span>Laporan</span></a></li>
@@ -46,28 +46,44 @@
 
     <main class="main-content">
         <div class="content-header">
-            <h1 id="content-title">Manajemen Surat</h1>
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#suratModal">
-                <i class="fas fa-plus"></i> Buat Surat Baru
+            <h1 id="content-title">Manajemen Resign Pegawai</h1>
+            <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#resignModal">
+                <i class="fas fa-plus"></i> Catat Pegawai Resign
             </button>
         </div>
 
+        <div class="card mb-3">
+            <div class="card-body">
+                <div class="form-group">
+                    <label for="search-input" class="form-label">Cari Riwayat (Nama / NIP):</label>
+                    <div class="input-with-icon">
+                        <i class="fas fa-search"></i>
+                        <input type="text" id="search-input" class="form-control" placeholder="Ketik untuk mencari...">
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="card">
-            <div class="card-header">Riwayat Pembuatan Surat</div>
+            <div class="card-header">Riwayat Pegawai Resign</div>
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-hover">
                         <thead class="table-light">
                             <tr>
                                 <th>No.</th>
-                                <th>Jenis Surat</th>
-                                <th>No. Surat</th>
                                 <th>Nama Pegawai</th>
-                                <th>Tanggal Surat</th>
+                                <th>NIP</th>
+                                <th>Jabatan Terakhir</th>
+                                <th>Tanggal Resign</th>
+                                <th>Alasan</th>
                                 <th>Aksi</th>
                             </tr>
                         </thead>
-                        <tbody id="tabel-surat-body">
+                        <tbody id="tabel-resign-body">
+                             <tr>
+                                <td colspan="7" class="text-center">Belum ada data pegawai resign.</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -75,57 +91,51 @@
         </div>
     </main>
 
-    <div class="modal fade" id="suratModal" tabindex="-1" aria-labelledby="suratModalLabel" aria-hidden="true">
+    <div class="modal fade" id="resignModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="suratModalLabel">Form Pembuatan Surat</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h5 class="modal-title">Form Pencatatan Resign Pegawai</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="form-surat" class="p-3">
-                        <input type="hidden" id="surat-pegawai-id" name="pegawai_id">
-                        
-                        <div class="row g-3 mb-4">
-                            <div class="col-md-5 position-relative">
-                                <label for="surat-nama" class="form-label">Nama Pegawai / Dokter (Cari)</label>
-                                <input type="text" id="surat-nama" class="form-control" placeholder="Ketik nama untuk mencari..." autocomplete="off" required>
-                                <div id="search-results-surat" class="search-results-dropdown"></div>
-                            </div>
-                            <div class="col-md-2">
-                                <label for="surat-nip" class="form-label">NIP</label>
-                                <input type="text" id="surat-nip" class="form-control" readonly>
-                            </div>
-                             <div class="col-md-2">
-                                <label for="surat-golongan" class="form-label">Golongan</label>
-                                <input type="text" id="surat-golongan" class="form-control" readonly>
-                            </div>
-                             <div class="col-md-3">
-                                <label for="surat-jabatan" class="form-label">Jabatan</label>
-                                <input type="text" id="surat-jabatan" class="form-control" readonly>
-                            </div>
-                        </div>
-                        
+                    <form id="form-resign" class="p-3">
+                        <input type="hidden" name="pegawai_id">
                         <div class="row g-3">
-                             <div class="col-md-12">
-                                <label for="jenis-surat-select" class="form-label fw-bold">Pilih Jenis Surat</label>
-                                <select id="jenis-surat-select" name="jenis_surat" class="form-select" required>
-                                    <option value="">-- Pilih Jenis --</option>
-                                    <option value="Rekomendasi">Rekomendasi</option>
-                                    <option value="Konsumtif">Keterangan Konsumtif</option>
-                                    <option value="Keterangan Kerja">Keterangan Kerja</option>
-                                </select>
+                            <div class="col-md-6 position-relative">
+                                <label class="form-label">Cari Nama Pegawai</label>
+                                <input type="text" class="form-control" placeholder="Ketik nama untuk mencari..." autocomplete="off" required>
+                                <div class="search-results-dropdown"></div>
                             </div>
-                        </div>
-                        <hr>
-                        <div id="form-dinamis-surat">
-                            <p class="text-center text-muted">Pilih jenis surat di atas untuk menampilkan form isian.</p>
+                             <div class="col-md-6">
+                                <label class="form-label">NIP</label>
+                                <input type="text" class="form-control" readonly>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Jabatan Terakhir</label>
+                                <input type="text" name="jabatan_terakhir" class="form-control" readonly>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Tanggal Resign</label>
+                                <input type="date" name="tanggal_resign" class="form-control" required>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="form-label">Alasan Resign</label>
+                                <textarea name="alasan" class="form-control" rows="3" required></textarea>
+                            </div>
+                             <div class="col-12 text-center mt-4">
+                                <label class="btn btn-outline-primary">
+                                    <i class="fas fa-paperclip"></i> Lampirkan Surat Resign (Jika Ada)
+                                </label>
+                                <input type="file" name="lampiran" class="d-none">
+                                <p class="text-muted mt-2 small"></p>
+                            </div>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
-                    <button type="submit" class="btn btn-primary" form="form-surat">
+                    <button type="submit" class="btn btn-danger" form="form-resign">
                         <i class="fas fa-save"></i> Simpan
                     </button>
                 </div>
@@ -135,6 +145,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/dashboard.js"></script>
-    <script src="assets/js/manajemen-surat.js"></script> </body>
+     </body>
 
 </html>
